# chromaprinter

./: Cargo.toml  build.rs
src/: audio.rs  chroma.rs  fingerprint.rs  lib.rs  pipeline.rs  test.rs  test_util.rs  util.rs
src/audio/: downmix.rs  fft.rs  resample.rs
src/audio/fft/: fftw.rs  hwindow.rs  vdsp.rs
src/audio/fft/vdsp/: sys.rs
src/chroma/: filter.rs  normalize.rs
src/fingerprint/: codec.rs  matcher.rs  rolling_image.rs
src/fingerprint/codec/: encoder.rs
src/fingerprint/matcher/: gaussian_filter.rs  gradient.rs
src/pipeline/: buf.rs  test_util.rs  windows.rs
src/test/: chromaprint.rs
